--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,14 @@
+version: '3'
+
 services:
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: >
+      sh -c "python manage.py makemigrations &&
+             python manage.py migrate &&
+             python manage.py createsuperuser --noinput --username admin --email admin@example.com &&
+             echo \"from django.contrib.auth import get_user_model; User = get_user_model(); user = User.objects.get(username='admin'); user.set_password('newpassword'); user.save()\" | python manage.py shell &&
+             python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/code
     ports:
