--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ click-repl==0.2.0
 Django==3.2
 django-audiofield==0.10.1
 django-celery==3.1.17
+django-cors-headers==4.0.0
 django-filter==23.2
 djangorestframework==3.14.0
 idna==3.4
