--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,9 @@ uploads/
 static/
 *.mp3
 *.wav
-
+/media
+media
+media/
 .idea/
 /.idea
 .idea
@@ -17,7 +19,7 @@ db.sqlite3/
 /db.sqlite3
 # C extensions
 *.so
-
+migrations
 # Distribution / packaging
 .Python
 build/
