--- a/.gitignore
+++ b/.gitignore
@@ -17,16 +17,26 @@ media/
 .idea
 
 
-/migrations
-migrations/
+/migrations/*_auto_*.py
+/migrations/*_initial.py
+*_initial.py
+/migrations/0001_initial.py
 
+
+
+
+
+
+
+migrations/*/
+/migrations/*
+migrations/*
 
 db.sqlite3
 db.sqlite3/
 /db.sqlite3
 # C extensions
 *.so
-migrations
 # Distribution / packaging
 .Python
 build/
