--- a/.gitignore
+++ b/.gitignore
@@ -16,13 +16,14 @@ media/
 /.idea
 .idea
 
+docker-compose.yml
 
-/migrations/*_auto_*.py
-/migrations/*_initial.py
+*/migrations/*_auto_*.py
+voice_recorder/migrations/*
 *_initial.py
 /migrations/0001_initial.py
 
-
+*/migrations/*
 
 
 
